<resources>
    <string name="app_name">Smart Learn</string>
    <string name="log_in">log in</string>
    <string name="register">Create your account</string>
    <string name="slogan">The best way to learn English!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="imgVocab">img_vocab</string>
    <string name="vocabulary_image">VOCABULARY IMAGE</string>
    <string name="word_quiz">WORD QUIZ</string>
    <string name="_600_toeic_words">600 TOEIC WORDS</string>
    <string-array name="genders">

        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_add_word">activity_add_word</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>