<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#8BC34A"
    android:fitsSystemWindows="true"
    tools:context=".HomePage"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/picton"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/normal_vocab"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="150dp"
                android:backgroundTint="#A2DF5B"
                android:text="@string/_600_toeic_words"
                android:textColor="@color/darkgreen"
                android:textSize="24sp"
                />

            <Button
                android:id="@+id/img_vocab"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="#CDDC39"
                android:text="@string/vocabulary_image"
                android:textColor="@color/darkgreen"
                android:textSize="24sp"></Button>

            <Button
                android:id="@+id/quiz_vocab"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="#F4E44F"
                android:text="@string/word_quiz"
                android:textColor="@color/darkgreen"
                android:textSize="24sp"></Button>
        </LinearLayout>
    </LinearLayout>
        <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:id="@+id/nav_view"
            app:headerLayout="@layout/nav_header"
            app:menu="@menu/drawer_menu"/>
</androidx.drawerlayout.widget.DrawerLayout>