<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/picton"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_app"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_app"
        android:layout_marginTop="@dimen/margin_basex3"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="SMART LEARN"
        android:textColor="@color/color1"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_basex3"
        android:text="@string/slogan"
        android:textColor="@color/color1"
        android:textSize="@dimen/text_small"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/tv_app_name"
        app:layout_constraintRight_toRightOf="@id/tv_app_name"
        app:layout_constraintTop_toBottomOf="@id/iv_app" />

    <Button
        android:id = "@+id/btn_log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_basex4"
        android:layout_marginLeft="@dimen/margin_basex4"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:text = "@string/log_in"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:drawableLeft="@drawable/ic_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id = "@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_basex4"
        android:layout_marginLeft="@dimen/margin_basex4"
        android:layout_marginBottom="@dimen/margin_basex5"
        android:text = "@string/register"
        android:textAllCaps="true"
        android:textColor="@color/color2"
        app:layout_constraintBottom_toTopOf="@id/btn_log_in"
        android:drawableLeft="@drawable/ic_sign_up"
        />
</androidx.constraintlayout.widget.ConstraintLayout>