<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/colorPrimary"
android:paddingLeft="@dimen/activity_vertical_margin"
android:paddingRight="@dimen/activity_vertical_margin"
tools:context=".ActivityLogIn">

<TextView
    android:id="@+id/tv_log_in"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:text="@string/log_in"
    android:textAllCaps="true"
    android:textColor="@color/color1"
    android:textSize="@dimen/text_medium"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<ImageView
    android:id="@+id/iv_username"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_basex5"
    android:layout_marginRight="@dimen/margin_basex2"
    android:src="@drawable/ic_username"
    app:layout_constraintRight_toLeftOf="@id/et_username"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_log_in" />

<EditText
    android:id="@+id/et_username"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/activity_vertical_margin"
    android:layout_marginTop="@dimen/margin_basex4"
    android:backgroundTint="@color/color1"
    android:hint="@string/username"
    android:textColor="@color/color1"
    android:textColorHint="@color/color_hint"
    app:layout_constraintBottom_toBottomOf="@id/iv_username"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintLeft_toRightOf="@id/iv_username"
    app:layout_constraintStart_toEndOf="@id/iv_username" />


<ImageView
    android:id="@+id/iv_password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_basex4"
    android:src="@drawable/ic_password"
    app:layout_constraintRight_toLeftOf="@id/et_password"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/iv_username" />

<EditText
    android:id="@+id/et_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/activity_vertical_margin"
    android:layout_marginTop="@dimen/margin_basex4"
    android:backgroundTint="@color/color1"
    android:hint="@string/password"
    android:password="true"
    android:textColor="@color/color1"
    android:textColorHint="@color/color_hint"
    app:layout_constraintBottom_toBottomOf="@id/iv_password"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintLeft_toRightOf="@id/iv_password"
    app:layout_constraintStart_toEndOf="@id/iv_password"
    app:layout_constraintTop_toBottomOf="@id/et_username" />

<Button
    android:id="@+id/btn_log_in"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_basex6"
    android:text ="@string/log_in"
    android:textAllCaps="true"
    android:textColor="@color/colorPrimary"
    app:layout_constraintTop_toBottomOf="@id/et_password" />

<TextView
    android:id="@+id/tv_forgot_password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_basex3"
    android:clickable="true"
    android:focusable="true"
    android:text="Forgot password?"
    android:textColor="@color/color1"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/btn_log_in" />


</androidx.constraintlayout.widget.ConstraintLayout>
